# esp32-c3-devkit

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
