[package]
name = "esp32-c3-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.11.1", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.17.0", features = ["esp32c3"] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = "0.4.21"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
